<resources>
    <string name="app_name">Lab</string>





    <!--    Sign up-->
    <string name="rupee">₹</string>
    <string name="dcp">DCP</string>
    <string name="Sign_up">Sign Up</string>
    <string name="new_dcp">New to DCP ? Please Provide your details!!!</string>
    <string name="Firstname">Firstname</string>
    <string name="Lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="mobile_Number">Mobile Number</string>
    <string name="Password">Password</string>
    <string name="Conform_Password">Conform Password</string>


    <!--    Sign in-->
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="RememberMe">Remember Me</string>
    <string name="sign_in_with">or Sign in with Fingerprint or Face</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_into">Please Sign in into your account!!</string>

    <!--    navigation_menu-->

    <string name="profile">Profile</string>
    <string name="my_lab_test_request">My Lab Test Request</string>
    <string name="my_review">My Review</string>
    <string name="my_wallet">My Wallet</string>
    <string name="Account_setting">Account Setting</string>
    <string name="logout">Logout</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <!--    home-->

    <string name="Net_Worth">Net Worth</string>
    <string name="Revenue">Revenue</string>
    <string name="lab_request">Lab Request</string>
    <string name="review">Review</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile_setting">ProfileSettingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!--    profile_setting-->
    <string name="first_name">Firstname</string>
    <string name="last_name">Lastname</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="Update_Photo">Update Photo</string>
    <string name="Choose_new_photo">Choose new photo</string>


    <!--    account_setting-->
    <string name="Change_Password">Change Password</string>
    <string name="Enter_Old_Password">Enter Old Password</string>
    <string name="New_Password">New Password</string>
    <string name="Enter_New_Password">Enter New Password</string>
    <string name="Payment_gateway_ID">Payment gateway ID</string>
    <string name="Enter_Payment_gateway_ID">Enter_Payment gateway ID</string>
    <string name="Deactivate_Account">Deactivate Account</string>

    <!--    Wallet  -->

    <string name="Transaction_Id">Transaction Id</string>
    <string name="Transaction_Date">Transaction Date</string>
    <string name="Order_Id">Order Id / Service Id</string>
    <string name="Transaction_Amount">Transaction Amount</string>
    <string name="Current_Wallet_Balance">Current Wallet Balance:</string>
    <string name="Amount">Amount</string>
    <string name="Enter_Amount">Enter Amount</string>

    <!--    lab_test_request-->
    <string name="Booking_Id">Booking Id</string>
    <string name="Patient_Name">Patient Name</string>
    <string name="date_ot_booking">Date of Booking</string>
    <string name="lab_test_name">Lab Test Name</string>
    <string name="lab_test_result">Lab Test Result</string>
    <string name="View_Details">View Details</string>


</resources>