<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/md_grey">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_marginRight="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/_7sdp"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/Booking_Id"
                                    android:textColor="@color/black_text_color"
                                    android:textSize="@dimen/_10sdp" />

                                <TextView
                                    android:id="@+id/BookingId"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="008979977"
                                    android:textColor="@color/black_text_color"
                                    android:textSize="@dimen/_12sdp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/_8sdp"
                                    android:text="@string/Patient_Name"
                                    android:textColor="@color/black_text_color"
                                    android:textSize="@dimen/_10sdp" />

                                <TextView
                                    android:id="@+id/patientName"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Name"
                                    android:textColor="@color/black_text_color"
                                    android:textSize="@dimen/_12sdp"
                                    android:textStyle="bold" />


                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/date_ot_booking"
                                        android:textColor="@color/black_text_color"
                                        android:textSize="@dimen/_10sdp" />

                                    <TextView
                                        android:id="@+id/dateOfBooking"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="Gujarat"
                                        android:textColor="@color/black_text_color"
                                        android:textSize="@dimen/_12sdp"
                                        android:textStyle="bold" />

                                </LinearLayout>


                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/lab_test_name"
                                    android:textColor="@color/black_text_color"
                                    android:textSize="@dimen/_10sdp" />

                                <TextView
                                    android:id="@+id/labTestName"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="008979977"
                                    android:textColor="@color/black_text_color"
                                    android:textSize="@dimen/_12sdp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/_8sdp"
                                    android:text="@string/Amount"
                                    android:textColor="@color/black_text_color"
                                    android:textSize="@dimen/_10sdp" />

                                <TextView
                                    android:id="@+id/amount"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Name"
                                    android:textColor="@color/black_text_color"
                                    android:textSize="@dimen/_12sdp"
                                    android:textStyle="bold" />


                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/lab_test_result"
                                        android:textColor="@color/black_text_color"
                                        android:textSize="@dimen/_10sdp" />

                                    <TextView
                                        android:id="@+id/labTestResult"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="Gujarat"
                                        android:textColor="@color/black_text_color"
                                        android:textSize="@dimen/_12sdp"
                                        android:textStyle="bold" />

                                </LinearLayout>


                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/viewBookingDetail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_36sdp"
                    android:background="@color/action_mode_color"
                    android:gravity="center"
                    android:text="@string/View_Details"
                    android:textColor="@color/white_button_color" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>